--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="images/camera-icon.png"/>
-    <title>Project Work</title>
+    <title>Ragnar Photography</title>
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Charis+SIL&family=Cinzel&family=Lobster&family=Trispace&display=swap" rel="stylesheet">
 
