--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 }
 .left{
     display:inline-block;
-    position:fixed;
+    position:absolute;
     top:1rem;
     left:2.5rem;
     /* border:black 2rem solid; */
